[package]
name = "bitmessage-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitmessage_rust" # Ensure this matches the crate name
path = "src/lib.rs"      # Path to your library root

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}
rand = { version = "0.8.5", features = ["std"] }
rand_core = "0.6"  # Ensure that rand_core is compatible
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
x25519-dalek = "2.0"
argon2 = { version = "0.5", features = ["password-hash"] }
hex = "0.4"
ripemd = "0.1"
scrypt = "0.11"
serde_json = "1.0"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"

